<resources>
    <string name="app_name">pract15_1_m</string>
    <string name="hello">ПРИВЕТ</string>
    <string name="naslazd">Наслаждайся отборочными.</string>
    <string name="bud">Будь внимателен.</string>
    <string name="delai">Делай хорошо.</string>
    <string name="login">Войти в аккаунт</string>
    <string name="eshe">Ещё нет аккаунта?</string>
    <string name="zareg">Зарегистрируйтесь</string>
    <string name="sign">Sign in</string>
    <string name="Email">Email</string>
    <string name="password">Пароль</string>
    <string name="reg">Register</string>
    <string name="prof">Профиль</string>
    <string name="back">С возвращением, Матвей</string>
    <string name="chuvst">Каким ты ощущаешь себя сегодня?</string>
    <string name="p1">Спокойным</string>
    <string name="p2">Расслабленным</string>
    <string name="p3">Сосредоточенным</string>
    <string name="p4">Взволнованным</string>
    <string name="c1">Заголовок блока</string>
    <string name="c2">Кратенькое описание блока с двумя строчками</string>
    <string name="c3">Подробнее</string>
    <string name="c4"></string>
    <string name="title_activity_ui">ui</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>